satellite/satconfig/satellite-demo-food-delivery/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: food-app-demo
  labels:
    name: food-app-demo
