satellite/satconfig/satellite-demo-food-delivery/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiservice
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
    dummy: test
spec:
  selector:
    matchLabels:
      name: apiservice
  replicas: 1
  template:
    metadata:
      labels:
        name: apiservice
    spec:
      containers:
        - image: anthonyamanse/apiservice:1.0.ddc
          name: apiservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: apiservice
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: apiservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courier
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: courier
  replicas: 1
  template:
    metadata:
      labels:
        name: courier
    spec:
      containers:
        - image: anthonyamanse/courierconsumer:1.0.ddc
          imagePullPolicy: Always
          name: courier
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: kitchen
  replicas: 1
  template:
    metadata:
      labels:
        name: kitchen
    spec:
      containers:
        - image: anthonyamanse/kitchenconsumer:1.0.ddc
          imagePullPolicy: Always
          name: kitchen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: orders
  replicas: 1
  template:
    metadata:
      labels:
        name: orders
    spec:
      containers:
        - image: anthonyamanse/orderconsumer:1.0.ddc
          imagePullPolicy: Always
          name: orders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podconsumerdata
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: podconsumerdata
  replicas: 1
  template:
    metadata:
      labels:
        name: podconsumerdata
    spec:
      serviceAccountName: deployer
      containers:
        - image: anthonyamanse/poddata:1.0.ddc
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          name: podconsumerdata
---
apiVersion: v1
kind: Service
metadata:
  name: podconsumerdata
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: podconsumerdata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtimedata
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: realtimedata
  replicas: 1
  template:
    metadata:
      labels:
        name: realtimedata
    spec:
      containers:
        - image: anthonyamanse/realtimedata:1.0.ddc
          imagePullPolicy: Always
          name: realtimedata
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: realtimedata
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: realtimedata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: status
  replicas: 1
  template:
    metadata:
      labels:
        name: status
    spec:
      containers:
        - image: anthonyamanse/statusservice:1.0.ddc
          imagePullPolicy: Always
          name: status
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: status
  namespace: food-app-demo
  labels:
    razee/watch-resource: detail
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: status
